# GeekProject

./: .gitignore  README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/guoxw/geekproject/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: calender.json  json_station.txt
app/src/main/cpp/: callbackJniLib.cpp  callbackJniLib.h  clientLib.h  exceptionLib.h  hexJniLib.cpp  hexJniLib.h  jni_ui.cpp  jni_ui.h  looper.cpp  looper.h  myJniLib.cpp  myJniLib.h  native-codec-jni.cpp  native-codec-jni.h  native-lib.cpp  serverLib.h  simple_model.cpp  simple_model.h  tcpipLib.cpp  tcpipLib.h  uninstallListenerJniLib.cpp  uninstallListenerJniLib.h
app/src/main/java/com/guoxw/geekproject/: AboutActivity.kt  FeedbackActivity.kt  MainActivity.kt  MapActivity.kt  MapTestActivity.kt  MyApplication.kt  SettingActivity.kt
app/src/main/java/com/guoxw/geekproject/base/: BaseActivity.kt  BaseBaseView.kt  BaseFragment.kt  BaseNetFragment.kt  BasePresenter.kt  BaseToolbarActivity.kt  BaseView.kt  BaseWebActivity.kt  IBasePresenter.kt
app/src/main/java/com/guoxw/geekproject/calendar/: CalenderActivity.kt
app/src/main/java/com/guoxw/geekproject/constatnt/: AppConstants.kt
app/src/main/res/drawable/: ripple_tab_bg.xml  shape_notclickbg.xml  theme_color.xml
app/src/main/res/drawable-v21/: ripple_tab_bg.xml
app/src/main/res/layout/: activity_about.xml  activity_base_socket.xml  activity_base_web.xml  activity_beauty.xml  activity_calender.xml  activity_client.xml  activity_feedback.xml  activity_gank_day_info.xml  activity_jni_callback.xml  activity_jni_ui.xml  activity_loop.xml  activity_main.xml  activity_map.xml  activity_map_test.xml  activity_nmodel.xml  activity_server.xml  activity_setting.xml  activity_toolbar_base.xml  activity_web_video.xml  fragment_android.xml  fragment_base.xml  fragment_beauty.xml  fragment_calendar.xml  fragment_gank.xml  include_main_center.xml  include_main_left.xml  include_title_main.xml  include_toolbar.xml  item_cal_good.xml  item_gank_android.xml  item_gank_data.xml  item_gank_image.xml  layout_amap.xml  layout_bmap.xml  layout_marker_cluster.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/com/guoxw/geekproject/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+136 files in other folders)
